Fix empty table row height in generated report, prevent table overflow Fixes #2545

--- a/chrome/skin/default/zotero/report/detail.css
+++ b/chrome/skin/default/zotero/report/detail.css
@@ -178,8 +178,12 @@ div table {
 div table td, div table th {
 	border: 1px #ccc solid;
 	border-collapse: collapse;
+	word-break: break-all;
 }
 
+div table td p:empty::after, div table th p:empty::after {
+	content: "\00a0";
+}
 
 div table td *:first-child, div table th *:first-child {
 	margin-top: 0;
